--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -26,14 +26,16 @@
   contents:
     - title: Lab Developer
       institution: Alston Elliot Live
-      year: October 2024 - PRESENT
+      year: OCT 2024 - PRESENT
       maindescription: Research Engineer spearheading the development of vision-centric proof-of-concepts in the sports broadcast space, independently executing projects end-to-end to drive product innovation.
       description:
         - title: Generating Vertical Feeds for Mobile Consumption
-        - description: Architected and developed a complete media pipeline to automatically convert 16:9 broadcast feeds into mobile-friendly 9:16 verticals by autonomously tracking and reframing the region-of-interest with upwards of 30 FPS. 
+          contents: 
+          - Architected and developed a complete media pipeline to automatically convert 16:9 broadcast feeds into mobile-friendly 9:16 verticals by autonomously tracking and reframing the region-of-interest with upwards of 30 FPS. 
+          - Owned the technical development of the POC, from initial hardware specifications and camera driver integration to building the software stack to handling output delivery via real-time streaming protocols. 
     - title: Research Engineer
       institution: Center for Visual Information Technology (CVIT)
-      year: May 2022 - October 2024
+      year: MAY 2022 - OCT 2024
       maindescription: Research assistant and lead engineer to Prof. Vineet Gandhi, pursuing research interests in computer vision and speech synthesis
       description:
         - title: Player Tracking for Star Sports
